--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Gllasy</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
    <header class="main-header">
@@ -200,7 +202,7 @@
     </main>
     <footer class="main-footer">
       <div class="footer-social">
-            <ul>
+            <ul class="social">
               <li><a class="social-button" href="#">Твиттер</a></li>
               <li><a class="social-button" href="#">Инстаграм</a></li>
               <li><a class="social-button" href="#">Фейсбук</a></li>
@@ -208,7 +210,7 @@
             </ul>
           </div>
           <div class="footer-about">
-                  <ul>
+                  <ul class="ft-about">
                     <li><a class="for-providers" href="#">Для поставщиков</a></li>
                     <li><a class="about-production" href="#">О производстве</a></li>
                     <li><a class="our-documents" href="#">Наши документы</a></li>
