--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="#">Хочу шоколадки!</a>
    </section>
    <section class="best-choise">
-    <ul>
+    <ul class="catalog-item">
       <li>
         <p>310 р<span>/кг</span></p>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -103,10 +103,10 @@
 <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 </section>
- <section class="ways-fruit">
+ <div class="ways-fruit">
    <h4>Новое в нашем блоге</h4>
    <a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
-</section>
+</div>
 <section class="sweet-subscribe">
   <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
   <form action="https://echo.htmlacademy.ru/" method="post">
@@ -132,7 +132,7 @@
 </main>
 <footer class="main-footer">
   <div class="footer-social">
-        <ul>
+        <ul class="social">
           <li><a class="social-button" href="https://twitter.com">Твиттер</a></li>
           <li><a class="social-button" href="https://www.instagram.com">Инстаграм</a></li>
           <li><a class="social-button" href="https://facebook.com">Фейсбук</a></li>
@@ -140,7 +140,7 @@
         </ul>
       </div>
       <div class="footer-about">
-            <ul>
+            <ul class="ft-about">
                 <li><a class="for-providers" href="forproviders.html">Для поставщиков</a></li>
                 <li><a class="about-production" href="about.html">О производстве</a></li>
                 <li><a class="our-documents" href="documents.html">Наши документы</a></li>
