--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              </p>
              <button class="button" type="submit">Войти</button>
              <p>
-               <a class="restore" href="restore-password.html">Забыли пароль?</a>
+               <a class="restore" href="restore-password.html">Забыли пароль?</a><br>
                <a class="new-registration" href="new-registration.html">Новая регистрация</a>
              </p>
            </form>
@@ -58,18 +58,26 @@
      <figure class="slider-content">
        <a href="#"><img src="img/ice-cream-1.png" width="1045" height="881" alt="Фон-1"></a>
      </figure>
+     <p class="сreme-brulee">Крем-брюле и пломбир<br>
+        с малиновым джемом</p>
      <span class="button background-1-radio-button"><a href="#"></a></span>
      <span class="button background-2-radio-button"><a href="#"></a></span>
      <span class="button background-3-radio-button"><a href="#"></a></span>
-     <a href="#">Давайте оба!</a>
+     <div class="get-it">
+       <a class="get-two" href="#">Давайте оба!</a>
+     </div>
    </section>
    <section class="special-offer">
      <h2>Малинка даром!</h2>
        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href="#">Хочу варенье!</a>
+        <div class="jam-background">
+          <a class="get-jam" href="#">Хочу варенье!</a>
+        </div>
      <h2>Шоколадки даром!</h2>
        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a href="#">Хочу шоколадки!</a>
+        <div class="chocolate-background">
+          <a class="get-chocolate" href="#">Хочу шоколадки!</a>
+        </div>
    </section>
    <section class="best-choise">
     <ul class="catalog-item">
@@ -97,20 +105,19 @@
    </section>
    <section class="about-waffle">
      <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
-      <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
- <p>
-Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
-<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+      <p>Все наше мороженое изготавливается на собственном<br> производстве, с использованием современного оборудования<br> и проверенных временем технологий.</p>
+ <p>Для приготовления мороженого используются настоящие<br> сливки и молоко высочайшего качества. Все дополнительные<br> ингредиенты и добавки произведены из натурального,<br> экологически чистого сырья. </p>
+<p>Закупка ингредиентов  производится только у проверенных<br> фермерских хозяйств и компаний, с которыми нас связывает<br> долговременное сотрудничество.</p>
+<p>Доставка нашего мороженого до заказчиков осуществляется<br> в специальном термопаке, который не дает мороженому<br> растаять в пути и позволяет сохранить превосходный вкус.</p>
 </section>
  <div class="ways-fruit">
    <h4>Новое в нашем блоге</h4>
-   <a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
+   <a class="blog" href="blog.html">10 способов сервировки<br> фруктовых щербетов<br> к столу</a>
 </div>
 <section class="sweet-subscribe">
-  <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+  <p class="sweet-background">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе<br> всего самого вкусного, что у нас происходит. Обещаем не спамить<br> и не слать всякой ненужной ерунды. Честно =) </p>
   <form action="https://echo.htmlacademy.ru/" method="post">
-    <label class="visually-hidden" for="emeil-field">Электронная почта</label>
+    <label class="visually-hidden" for="email-field">Электронная почта</label>
       <input type="text" id="email-field" name="email-adress" value="Электронная почта">
       <button class="button" type="submit">Отправить</button>
   </form>
@@ -119,24 +126,40 @@
    <img src="img/map.jpg" width="1200" height="430" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург">
  </div>
   <div class="contacts-info">
-  <p>Адрес главного офиса
+  <p>Адрес главного офиса<br>
 и офлайн-магазина:<br>
-<span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
+<span>ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</span></p>
 <p>Для заказов по телефону:<br>
-  <span>8 812 450-25-25</span>
+  <span>8 812 450-25-25</span><br>
 (с 10 до 20 ежедневно)</p>
- <form action="https://echo.htmlacademy.ru/" method="post">
-   <button class="button" type="button">Форма обратной связи</button>
- </form>
+   <div class="connect">
+    <a class="button-connect" href="#">Форма обратной связи</a>
+  </div>
 </div>
 </main>
 <footer class="main-footer">
   <div class="footer-social">
         <ul class="social">
-          <li><a class="social-button" href="https://twitter.com">Твиттер</a></li>
-          <li><a class="social-button" href="https://www.instagram.com">Инстаграм</a></li>
-          <li><a class="social-button" href="https://facebook.com">Фейсбук</a></li>
-          <li><a class="social-button" href="https://vk.com">Вконтакте</a></li>
+          <li>
+           <div class="twitter">
+            <a class="twitter" href="https://twitter.com"></a>
+           </div>
+          </li>
+          <li>
+           <div class="instagram">
+            <a class="instagram" href="https://www.instagram.com"></a>
+           </div>
+          </li>
+          <li>
+           <div class="facebook">
+            <a class="facebook" href="https://facebook.com"></a>
+           </div>
+          </li>
+          <li>
+           <div class="vk">
+            <a class="vk" href="https://vk.com"></a>
+          </div>
+          </li>
         </ul>
       </div>
       <div class="footer-about">
@@ -144,7 +167,7 @@
                 <li><a class="for-providers" href="forproviders.html">Для поставщиков</a></li>
                 <li><a class="about-production" href="about.html">О производстве</a></li>
                 <li><a class="our-documents" href="documents.html">Наши документы</a></li>
-                <li><a class="environmental standards" href="standards.html">Экологические стандарты</a></li>
+                <li><a class="environmental-standards" href="standards.html">Экологические стандарты</a></li>
             </ul>
       </div>
  <p>
